--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@14islands/r3f-scroll-rig": "^8.12.3",
     "@eslint/eslintrc": "^2.1.4",
     "@react-three/drei": "^9.92.6",
     "@react-three/fiber": "^8.15.12",
+    "canvas-txt": "^4.1.1",
     "maath": "^0.10.7",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-three-fiber": "^6.0.13",
     "three": "^0.160.0",
-    "three.js": "^0.77.1"
+    "troika-three-text": "^0.49.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -32,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-glsl": "^1.2.1"
   }
 }
